--- a/3 index.html
+++ b/3 index.html
@@ -11,7 +11,7 @@
 <h2>
 <p>
 		<li>Category: Pilsbury Doughboy</li>
-	<img src="http://tinyurl.com/n2tyh5z" height="200px"><br>	
+	<img src="http://tinyurl.com/l8eolx7" height="200px"><br>	
 		<br>
 		<li>Type: Teacher/Sweater Enthusiast</li>
 	<img src="http://tinyurl.com/m658ks6" height="200px"><br>
