--- a/3 index.html
+++ b/3 index.html
@@ -6,7 +6,7 @@
 <body>
 <div class="border">
 	<h1>How to be More Okapal</h1>
-	<h2>The One With the Beard</h2>
+	<h2>M'KAY?</h2>
 	<img src="http://tinyurl.com/n3ve9on" height="200px">
 <h2>
 <p>
@@ -14,7 +14,7 @@
 	<img src="http://tinyurl.com/l8eolx7" height="200px"><br>	
 		<br>
 		<li>Type: Teacher/Sweater Enthusiast</li>
-	<img src="http://tinyurl.com/m658ks6" height="200px"><br>
+	<img src="http://tinyurl.com/k55sdss" height="200px"><br>
 		<br>
 		<li>Ability: M'kay, lecture, Debate</li>
 	<img src="http://tinyurl.com/mwm9o2g" height="200px"><br>
@@ -40,7 +40,7 @@
 	<ol>
 		<li>Tell kids to get to class as you wallk down the hallways</li>
 		<li>Your natural talking voice should be loud and capturing, attention will be had by you. You should never get angry, only
-		annoyed, this is an oppertunity to be funny and loud but also to lecture.</li>
+		annoyed, this is an oppertunity to be funny and possibly loud, but also to lecture.</li>
 		<li>Be sure to have a sense of humor and let kids have one too without letting it become disrespectful</li>
 		<li>Always look like you have something to do, even when you don't. This is to keep students from approacing you.</li>
 	</ol>
