--- a/3 index.html
+++ b/3 index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 		<link href="style.css" rel="stylesheet" type="text/css">
-	<title>Tutorial part 2</title>
+	<title>Okapal Tutorial</title>
 </head>
 <body>
 <div class="border">
