--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 		<link href="style.css" rel="stylesheet" type="text/css">
-	<title>Tutorial</title>
+	<title>Stallings Tutorial</title>
 </head>
 <body>
 <div class="border">
