--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<li>Ability: Intimidate, Knit, Cat nap</li>
 	<img src="http://tinyurl.com/kmsj6yf" height="200px"><br>
 		<br>
-		<li>Weakness: Coffee, Dress Shirts, Cats</li>
+		<li>Weaknesses: Coffee, Dress Shirts, Cats</li>
 	<img src="https://tinyurl.com/k832wqk" height="200px"><br>
 </p>
 </h2>
